# ModProg2022

./: .gitignore  CMakeLists.txt  README.md
Error/Headers/: cError.h
Error/Sources/: StdAfxError.cpp  cError.cpp
Error/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
ExampleDebug/Headers/: StdAfxTestCPlusPlus.h
ExampleDebug/Source/: Tests.cpp
ExampleDebug/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
ExamplePlot/Headers/: StdAfxExamplePlot.h  matplotlibcpp.h
ExamplePlot/Sources/: ExamplePlot.cpp
ExamplePlot/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
Mixtures/Headers/: MixturesDef.h  StdAfxMixtures.h  cCorruptedGaussian.h  cDistribution.h  cExponential.h  cGaussian.h
Mixtures/Sources/: cCorruptedGaussian.cpp  cDistribution.cpp  cExponential.cpp  cGaussian.cpp
Mixtures/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
Test/Headers/: StdAfxTestCPlusPlus.h
Test/Sources/: TestCPlusPlus.cpp
Test/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  configurations.xml  project.xml
include/: CMakeLists.txt
include/error/: StdAfxError.h  cError.h
include/matplotlib/: CMakeLists.txt  matplotlibcpp.h
include/mixtures/: StdAfxMixtures.h  cDistribution.h  cExponential.h  cGaussian.h
src/: CMakeLists.txt
src/error/: CMakeLists.txt  StdAfxError.cpp  cError.cpp
src/mixtures/: CMakeLists.txt  cDistribution.cpp  cExponential.cpp  cGaussian.cpp
test/: CMakeLists.txt  TestCPlusPlus.cpp
